--- a/client/main.css
+++ b/client/main.css
@@ -1,8 +1,8 @@
 /* CSS declarations go here */
 body {
   font-family: sans-serif;
-  background-color: #315481;
-  background-image: linear-gradient(to bottom, #315481, #918e82 100%);
+  background-color: #78184a;
+  background-image: linear-gradient(to bottom, #78184a, #50404d 100%);
   background-attachment: fixed;
  
   position: absolute;
