--- a/client/main.css
+++ b/client/main.css
@@ -1,8 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Muli:300|Roboto:300');
+
 /* CSS declarations go here */
 body {
-  font-family: sans-serif;
-  background-color: #78184a;
-  background-image: linear-gradient(to bottom, #78184a, #50404d 100%);
+  font-family: 'Muli', 'Roboto', sans-serif;
+  background-color: #3A1040;
   background-attachment: fixed;
  
   position: absolute;
@@ -14,7 +15,7 @@ body {
   padding: 0;
   margin: 0;
  
-  font-size: 14px;
+  font-size: 16px;
 }
  
 .container {
@@ -24,8 +25,7 @@ body {
 }
  
 header {
-  background: #d2edf4;
-  background-image: linear-gradient(to bottom, #d0edf5, #e1e5f0 100%);
+  background: #6D728C;
   padding: 20px 15px 15px 15px;
   position: relative;
 }
@@ -33,8 +33,20 @@ header {
 #login-buttons {
   display: block;
 }
+
+.main-title h1 {
+  font-family: 'Roboto', sans-serif;
+  font-size: 2.0em;
+  font-weight: bold;
+  margin: 0;
+  margin-bottom: 10px;
+  display: inline-block;
+  margin-right: 1em;
+}
  
-h1 {
+h1, h1 > a {
+  color: #F2F2F2!important;
+  font-family: 'Roboto', sans-serif;
   font-size: 1.5em;
   margin: 0;
   margin-bottom: 10px;
@@ -45,13 +57,19 @@ h1 {
 .panel-heading .accordion-toggle:after {
   /* symbol for "opening" panels */
   font-family: 'Glyphicons Halflings';  /* essential for enabling glyphicon */
-  content: "\e114";    /* adjust as needed, taken from bootstrap.css */
-  float: right;        /* adjust as needed */
-  color: grey;         /* adjust as needed */
+  content: "\e114";    /* taken from bootstrap.css */
+  float: right;
+  color: grey;
 }
+
 .panel-heading .accordion-toggle.collapsed:after {
   /* symbol for "collapsed" panels */
   content: "\e080";    /* adjust as needed, taken from bootstrap.css */
+}
+
+.main-accordion .accordion-toggle:after {
+  color:#F2F2F2;
+  padding-left: 10px;
 }
  
 form {
