--- a/client/main.css
+++ b/client/main.css
@@ -15,7 +15,7 @@ body {
   padding: 0;
   margin: 0;
  
-  font-size: 16px;
+  font-size: 15px;
 }
  
 .container {
@@ -51,7 +51,6 @@ h1, h1 > a {
   margin: 0;
   margin-bottom: 10px;
   display: inline-block;
-  margin-right: 1em;
 }
 
 .panel-heading .accordion-toggle:after {
@@ -70,6 +69,7 @@ h1, h1 > a {
 .main-accordion .accordion-toggle:after {
   color:#F2F2F2;
   padding-left: 10px;
+  font-size: 1.0em;
 }
  
 form {
@@ -144,7 +144,11 @@ header .show-starred {
 .top-buffer {
   margin-top: 10px;
 }
- 
+
+.table-wrapper {
+  overflow-x:auto;
+}
+
 @media (max-width: @screen-xs-max) {
   header {
     padding: 0px 0px 0px 0px;
