--- a/client/main.css
+++ b/client/main.css
@@ -34,12 +34,6 @@ header {
   display: block;
 }
 
-.main-title .row {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .main-title h1 {
   font-family: 'Roboto', sans-serif;
   font-size: 2.0em;
@@ -62,11 +56,33 @@ h1, h1 > a {
 .title-list ul {
   padding: 0;
   margin: 0;
+  margin-top: 20px;
 }
 
 .title-list li {
   padding: 5px;
   border: none;
+}
+
+.tagline-list ul {
+  margin-top: 40px;
+  padding: 0;
+}
+
+@media (max-width: 767px) {
+  .tagline-list ul {
+    margin-top: 0;
+  }
+}
+
+.tagline-list li {
+  border: none;
+  padding: 2px;
+}
+
+.tagline-list h4 {
+  margin: 0px;
+  color: #D0D0D0;
 }
 
 .bottom-line {
