--- a/client/main.css
+++ b/client/main.css
@@ -65,6 +65,12 @@ h1, h1 > a {
   margin-top: 20px;
 }
 
+@media (max-width: 767px) {
+  .title-list ul {
+    margin-top: 5px;
+  }
+}
+
 .title-list li {
   padding: 5px;
   border: none;
